...
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hist_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:animateLayoutChanges="false"
            android:clipToPadding="false"
            android:divider="@null"
...
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            tools:listitem="@layout/item_number_selected" />

                        <EditText
                            android:id="@+id/msg_input_txt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/write_a_message"
                            android:imeOptions="actionSend|flagNoExtractUi"
...
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
                            android:textSize="18sp"
                            tools:text="@string/conversation_default_emoji" />

                        <ImageButton
                            android:id="@+id/msg_send"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/send_message"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
...
