...
    <string name="contact_unblock">Unblock</string>
    <string name="video_extensions">Video extensions</string>
    <string name="file_download_button">Download</string>
    <string name="control_play">Play</string>
    <string name="control_replay">Replay</string>
    <string name="control_pause">Pause</string>
    <string name="searchbar_navigation_account">Select account</string>
    <string name="add_conversation_member">Add conversation member</string>
    <string name="qrcode_to_scan">QR code to scan</string>
    <string name="collab_format_bold">Bold</string>
    <string name="collab_format_italic">Italic</string>
    <string name="collab_format_underline">Underline</string>
    <string name="collab_format_strike">Strikethrough</string>
...
