...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:textSize="30sp"/>

        <ListView
                android:id="@+id/confs_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confs_counter">
        </ListView>
    </RelativeLayout>

...
